--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.0
 
   # Internationalization
   intl: ^0.20.0
@@ -48,6 +48,14 @@ dependencies:
 
   # Routing
   go_router: ^16.0.0
+
+  # Database - Persistence
+  drift: ^2.20.0
+  drift_flutter: ^0.2.0
+  path_provider: ^2.0.0
+  sqlite3_flutter_libs: ^0.5.0
+  sqlite3: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +74,9 @@ dev_dependencies:
   build_runner: ^2.0.0
   riverpod_generator: ^3.0.0
   go_router_builder: ^4.0.0
+  drift_dev: ^2.20.0
+  build_web_compilers: ^4.0.0
+  build: '>=3.0.0 <5.0.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
