--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,13 +1,10 @@
-name: CI
+name: CI (Main)
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  # Job 1: Setup, Code Generation, and Static Analysis
   setup-and-validation:
     name: Setup & Validation
     runs-on: ubuntu-latest
@@ -50,7 +47,6 @@ jobs:
       - name: Run static analysis
         run: flutter analyze
 
-  # Job 2: Unit and Widget Tests
   unit-widget-tests:
     name: Unit & Widget Tests
     runs-on: ubuntu-latest
@@ -108,7 +104,6 @@ jobs:
           name: coverage-report-${{ matrix.flutter-channel }}
           path: coverage/
 
-  # Job 3: Integration Tests
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -186,12 +181,10 @@ jobs:
             --target=integration_test/locale_switching_comprehensive_test.dart \
             -d web-server
 
-  # Job 4: Build Web Release (stable channel only)
   build-web:
     name: Build Web Release
     runs-on: ubuntu-latest
     needs: [unit-widget-tests, integration-tests]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
@@ -248,3 +241,5 @@ jobs:
       - name: Deploy artifact
         id: deployment
         uses: actions/deploy-pages@v4
+
+
