test: add integration test for theme mode switching (#7)
* test: add integration test for theme mode switching

Adds comprehensive integration test covering theme mode selection
(System, Light, Dark) via the menu AppBar.

* correct file name

* rename theme mode integration test

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -116,6 +116,7 @@ jobs:
           - integration_test/two_player_game_test.dart
           - integration_test/locale_switching_basic_test.dart
           - integration_test/locale_switching_comprehensive_test.dart
+          - integration_test/theme_mode_test.dart
       fail-fast: false
     env:
       CHROMIUM_FLAGS: "--headless --no-sandbox --disable-gpu --disable-dev-shm-usage"
@@ -181,5 +182,3 @@ jobs:
             --driver=test_driver/integration_test.dart \
             --target=${{ matrix.target }} \
             -d web-server)
-
-
