chore(ci): skip workflows on non-code file changes
Add paths-ignore filters to both CI workflows to prevent running
expensive CI jobs (tests, builds) when only documentation or editor
configuration files are changed.

Ignored paths: - Markdown files (**.md) - Documentation (docs/**) -
Editor configs (.vscode, .idea, .zed) - Project configs (.gitignore,
.editorconfig, LICENSE, **.txt)

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -3,6 +3,16 @@ name: CI (PR)
 on:
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "**.md"
+      - "**.txt"
+      - "LICENSE"
+      - ".gitignore"
+      - ".editorconfig"
+      - ".vscode/**"
+      - ".idea/**"
+      - ".zed/**"
+      - "docs/**"
 
 jobs:
   setup-and-validation:
