--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -3,6 +3,16 @@ name: CI (Main)
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - "**.md"
+      - "**.txt"
+      - "LICENSE"
+      - ".gitignore"
+      - ".editorconfig"
+      - ".vscode/**"
+      - ".idea/**"
+      - ".zed/**"
+      - "docs/**"
 
 jobs:
   setup-and-validation:
