feat(pwa): add offline support with service worker caching
Implement complete PWA offline functionality with a Dart-based service
worker that provides smart multi-strategy caching, offline page
fallback, and periodic update checking. Includes precaching of critical
assets and graceful fallbacks for unsupported platforms.

- Add service_worker feature with platform-agnostic registration -
Implement stale-while-revalidate for static assets - Implement
network-first with cache fallback for dynamic content - Add offline.html
fallback page with connection status detection - Compile Dart service
worker to JavaScript via dart2js - Update build.yaml to support multiple
JS compilations - Integrate service worker initialization into app
startup - Configure web build to use custom service worker
(--pwa-strategy none)

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -232,7 +232,9 @@ jobs:
         run: |
           flutter build web \
             --base-href /tic_tac_toe/ \
-            --target lib/production.dart
+            --target lib/production.dart \
+            --pwa-strategy none \
+            --no-web-resources-cdn
 
       - name: Upload web build for Pages
         uses: actions/upload-pages-artifact@v4
